<resources>
    <string name="app_name">grupozap</string>
    <string name="versao_app">Versão 1.0.0</string>
    <string name="logo_viva_real">Logo Viva Real</string>
    <string name="text_sobre">Quando o assunto é imóvel, o ZAP tem todas as soluções.</string>
    <string name="Logo_zap">Logo Zao Imóveis</string>
    <string name="text_versao_app">Versão 1.0.0</string>
    <string name="imovel_aluguel">Imóvel para Aluguel</string>
    <string name="bedroom">quarto</string>
    <string name="bathroom">banheiro</string>
    <string name="meters">m²</string>
    <string name="vacancy">vagas</string>
    <string name="value">Valor</string>
    <string name="property_type_sale">Imóvel para Venda</string>
    <string name="property_type_rent">Imóvel para Aluguel</string>
    <string name="formatacao_reais">R$ %1$.2f</string>
    <string name="logo_zap">Logo GrupoZap</string>
    <string name="title_main_activity">Imóveis perto de você</string>
    <string name="next">Ver Mais</string>
    <string name="Detalhe">Detalhe</string>
    <string name="icon_bathrooms_detail">icon bathrooms detail</string>
    <string name="Local">Rua Jose Geraldo Nogueira</string>
    <string name="Bairro">São joão de meriti , RJ</string>
    <string name="icon_area_detail">icon area detail</string>
    <string name="icon_badroom_detail">icon badroom detail</string>
    <string name="icon_parking_spaces_detail">icon bathrooms detail</string>
</resources>