<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imagens_buildin_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/imagens_itens"
        tools:itemCount="9"
        android:scrollbars="horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/item_BuildingType_activity"
        android:text="@string/property_type_rent"
        android:textSize="@dimen/max_font_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_24"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/imagens_buildin_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/num_bedroom_building_activity"
        tools:text="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintTop_toBottomOf="@+id/item_BuildingType_activity"
        app:layout_constraintStart_toStartOf="@+id/item_BuildingType_activity"
        />

    <TextView
        android:id="@+id/bedroom_building_activity"
        android:text="@string/bedroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        app:layout_constraintTop_toTopOf="@+id/num_bedroom_building_activity"
        app:layout_constraintStart_toEndOf="@+id/num_bedroom_building_activity"
        />

    <TextView
        android:id="@+id/num_bathroom_building_activity"
        android:text="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        app:layout_constraintTop_toTopOf="@+id/num_bedroom_building_activity"
        app:layout_constraintStart_toEndOf="@+id/bedroom_building_activity"/>

    <TextView
        android:id="@+id/bathroom_building_activity"
        android:text="@string/bathroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        app:layout_constraintTop_toTopOf="@+id/num_bedroom_building_activity"
        app:layout_constraintStart_toEndOf="@+id/num_bathroom_building_activity"/>

    <TextView
        android:id="@+id/num_square_meters_building_activity"
        tools:text="70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/num_bedroom_building_activity"
        app:layout_constraintStart_toStartOf="@+id/num_bedroom_building_activity" />

    <TextView
        android:id="@+id/square_meters_building_activity"
        android:text="@string/meters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        app:layout_constraintTop_toBottomOf="@+id/num_bedroom_building_activity"
        app:layout_constraintStart_toStartOf="@+id/num_square_meters_building_activity"/>

    <TextView
        android:id="@+id/num_vacancy_building_fragment"
        tools:text="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/num_bedroom_building_activity"
        app:layout_constraintStart_toStartOf="@+id/num_bathroom_building_activity"/>

    <TextView
        android:id="@+id/vacancy_building_activity"
        android:text="@string/vacancy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        app:layout_constraintTop_toBottomOf="@+id/num_bedroom_building_activity"
        app:layout_constraintStart_toEndOf="@+id/num_vacancy_building_fragment"/>

    <TextView
        android:id="@+id/num_values_building_activity"
        tools:text="R$ 1000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:textSize="@dimen/med_font_size"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_24"
        app:layout_constraintEnd_toEndOf="@+id/item_BuildingType_activity"
        app:layout_constraintTop_toTopOf="@+id/values_building_activity"
        app:layout_constraintStart_toEndOf="@+id/values_building_activity"
        app:layout_constraintVertical_bias="0.0"
        />

    <TextView
        android:id="@+id/values_building_activity"
        android:text="@string/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:textSize="@dimen/med_font_size"
        app:layout_constraintTop_toBottomOf="@+id/vacancy_building_activity"
        app:layout_constraintStart_toStartOf="@+id/item_BuildingType_activity"/>
</androidx.constraintlayout.widget.ConstraintLayout>