<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_16"
    android:layout_marginStart="@dimen/margin_16"
    android:layout_marginEnd="@dimen/margin_16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imagens_fragment"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:importantForAccessibility="no"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/rental_building_fragment"
            android:text="@string/imovel_aluguel"
            android:textSize="@dimen/max_font_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imagens_fragment"/>

        <TextView
            android:id="@+id/num_bedroom_building_fragment"
            tools:text="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintTop_toBottomOf="@+id/rental_building_fragment"
            app:layout_constraintStart_toStartOf="@+id/imagens_fragment"
            />

        <TextView
            android:id="@+id/bedroom_building_fragment"
            android:text="@string/bedroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintTop_toTopOf="@+id/num_bedroom_building_fragment"
            app:layout_constraintStart_toEndOf="@+id/num_bedroom_building_fragment"/>

        <TextView
            android:id="@+id/num_bathroom_building_fragment"
            android:text="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            app:layout_constraintTop_toTopOf="@+id/num_bedroom_building_fragment"
            app:layout_constraintStart_toEndOf="@+id/bedroom_building_fragment"/>

        <TextView
            android:id="@+id/bathroom_building_fragment"
            android:text="@string/bathroom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/num_bedroom_building_fragment"
            app:layout_constraintStart_toEndOf="@+id/num_bathroom_building_fragment"/>

        <TextView
            android:id="@+id/num_square_meters_building_fragment"
            android:text="70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/num_bathroom_building_fragment"
            app:layout_constraintStart_toEndOf="@+id/num_bathroom_building_fragment"/>

        <TextView
            android:id="@+id/square_meters_building_fragment"
            android:text="@string/meters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintTop_toBottomOf="@+id/num_bathroom_building_fragment"
            app:layout_constraintStart_toEndOf="@id/num_square_meters_building_fragment" />

        <TextView
            android:id="@+id/num_vacancy_building_fragment"
            android:text="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/bathroom_building_fragment"
            app:layout_constraintStart_toStartOf="@id/num_bathroom_building_fragment"/>

        <TextView
            android:id="@+id/vacancy_building_fragment"
            android:text="@string/vacancy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bathroom_building_fragment"
            app:layout_constraintStart_toEndOf="@+id/num_vacancy_building_fragment"/>

        <TextView
            android:id="@+id/values_building_fragment"
            android:text="@string/value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_8"
            android:textSize="@dimen/med_font_size"
            app:layout_constraintEnd_toStartOf="@+id/num_values_building_fragment"
            app:layout_constraintTop_toBottomOf="@+id/vacancy_building_fragment"
            app:layout_constraintStart_toEndOf="@+id/imagens_fragment" />

        <TextView
            android:id="@+id/num_values_building_fragment"
            tools:text="R$ 1000000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:textSize="@dimen/med_font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/margin_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/values_building_fragment"
            app:layout_constraintStart_toEndOf="@+id/values_building_fragment" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>